tests/snapshots/info_snapshots__cursor.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [
    "ide"
  ],
  "evidence": [
    {
      "confidence": 1.0,
      "key": "is_tty_stdin",
      "signal": "tty",
      "supports": [
        "is_tty_stdin"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "is_tty_stdout",
      "signal": "tty",
      "supports": [
        "is_tty_stdout"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "is_tty_stderr",
      "signal": "tty",
      "supports": [
        "is_tty_stderr"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "TERM_PROGRAM",
      "signal": "env",
      "supports": [
        "ide",
        "ide_id"
      ],
      "value": "vscode"
    },
    {
      "confidence": 1.0,
      "key": "CURSOR_TRACE_ID",
      "signal": "env",
      "supports": [
        "ide",
        "ide_id"
      ],
      "value": "xyz"
    }
  ],
  "facets": {
    "ci": {
      "is_ci": false
    },
    "host": "unknown",
    "ide_id": "cursor"
  },
  "meta": {
    "schema_version": "0.2.0"
  },
  "traits": {
    "color_level": "none",
    "is_ci": false,
    "is_interactive": false,
    "is_piped_stdin": true,
    "is_piped_stdout": true,
    "is_tty_stderr": false,
    "is_tty_stdin": false,
    "is_tty_stdout": false,
    "supports_hyperlinks": false
  }
}
