tests/snapshots/info_snapshots__gitlab_ci.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [
    "ci"
  ],
  "facets": {
    "ci": {
      "is_ci": true,
      "name": "GitLab CI",
      "pr": false,
      "vendor": "gitlab_ci"
    },
    "ci_id": "gitlab_ci"
  },
  "meta": {
    "schema_version": "0.2.0"
  },
  "traits": {
    "ci_name": "GitLab CI",
    "ci_pr": false,
    "ci_vendor": "gitlab_ci",
    "color_level": "none",
    "is_ci": true,
    "is_interactive": false,
    "is_piped_stdin": true,
    "is_piped_stdout": true,
    "is_tty_stderr": false,
    "is_tty_stdin": false,
    "is_tty_stdout": false,
    "supports_hyperlinks": false
  }
}
