tests/snapshots/info_snapshots__nested_structure_comprehensive.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [
    "agent",
    "ci",
    "ide"
  ],
  "evidence": [
    {
      "confidence": 1.0,
      "key": "terminal.stdin.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdin.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stdout.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdout.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stderr.tty",
      "signal": "tty",
      "supports": [
        "terminal.stderr.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.interactive",
      "signal": "tty",
      "supports": [
        "terminal.interactive"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "CURSOR_AGENT",
      "signal": "env",
      "supports": [
        "agent.id"
      ],
      "value": "1"
    },
    {
      "confidence": 1.0,
      "key": "TERM_PROGRAM",
      "signal": "env",
      "supports": [
        "ide",
        "ide.id"
      ],
      "value": "vscode"
    }
  ],
  "facets": {},
  "meta": {
    "schema_version": "0.3.0"
  },
  "traits": {
    "agent": {
      "id": "cursor"
    },
    "ci": {
      "id": "github_actions",
      "name": "GitHub Actions",
      "vendor": "github_actions"
    },
    "ide": {
      "id": "vscode"
    },
    "terminal": {
      "color_level": "none",
      "interactive": false,
      "stderr": {
        "piped": true,
        "tty": false
      },
      "stdin": {
        "piped": true,
        "tty": false
      },
      "stdout": {
        "piped": true,
        "tty": false
      },
      "supports_hyperlinks": false
    }
  }
}
