tests/snapshots/info_snapshots__plain_tty.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [],
  "evidence": [
    {
      "confidence": 1.0,
      "key": "terminal.stdin.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdin.tty"
      ],
      "value": "true"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stdout.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdout.tty"
      ],
      "value": "true"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stderr.tty",
      "signal": "tty",
      "supports": [
        "terminal.stderr.tty"
      ],
      "value": "true"
    },
    {
      "confidence": 1.0,
      "key": "terminal.interactive",
      "signal": "tty",
      "supports": [
        "terminal.interactive"
      ],
      "value": "true"
    }
  ],
  "facets": {},
  "meta": {
    "schema_version": "0.3.0"
  },
  "traits": {
    "agent": {},
    "ci": {},
    "ide": {},
    "terminal": {
      "color_level": "ansi256",
      "interactive": true,
      "stderr": {
        "piped": false,
        "tty": true
      },
      "stdin": {
        "piped": false,
        "tty": true
      },
      "stdout": {
        "piped": false,
        "tty": true
      },
      "supports_hyperlinks": false
    }
  }
}
